Overflow fix. Login and Register page style

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -12,6 +12,7 @@ main {
     width: calc(100% - 300px);
     padding: 20px;
     color: var(--text-surface);
+    overflow: auto;
 }
 
 .card {
